--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -1,15 +1,12 @@
-/* * {
+@charset "UTF-8";
+* {
 	padding: 0;
 	margin: 0;
-	width: 1100px;
-	margin: 0 auto;
-} */
+}
 
 body {
-	padding: 0;
 	width: 1100px;
 	margin: 0 auto;
-    font-size: 15px;
 }
 ul{
    list-style:none;
@@ -30,7 +27,7 @@ ul{
 	box-sizing: border-box;
 }
 .main_content .reserve{
-	border: 1px solid black;
+	/* border: 1px solid black; */
 	width: 50%;
 	height: 500px;
 	float: right;
