--- a/src/main/resources/templates/footerNav.html
+++ b/src/main/resources/templates/footerNav.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>footerNav</title>
 <link rel="stylesheet" type="text/css" th:href="@{/css/footerNav.css}">
 </head>
 <body>
