--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,6 +6,9 @@
 <link rel="stylesheet" href="css/index.css">
 </head>
 <body>
+	<a href="/reservation/terms.do">terms</a>
+	<a href="/reservation/pay.do">pay</a>
+	<a href="/reservation/payComplete.do">payComplete</a>
 
 	<th:block th:if="${session.loginCt==null}">
 		<h2>
