--- a/src/main/resources/templates/reservation/reservationPay.html
+++ b/src/main/resources/templates/reservation/reservationPay.html
@@ -6,6 +6,7 @@
 <title>Insert title here</title>
 <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css">
 <script th:src="@{/bootstrap/js/bootstrap.bundle.min.js}"></script>
+<script defer="defer" src="/js/reservation/pay.js"></script>
 </head>
 <body>
 	<div class="container mt-5 p-2">
@@ -30,20 +31,20 @@
 					  	</label>
 					</div>
 					<div class="form-check">
-		  				<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-		  				<label class="form-check-label" for="flexRadioDefault1">
+		  				<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+		  				<label class="form-check-label" for="flexRadioDefault2">
 		    				쿠폰 2
 		  				</label>
 					</div>
 					<div class="form-check">
-		  				<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-		  				<label class="form-check-label" for="flexRadioDefault1">
+		  				<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+		  				<label class="form-check-label" for="flexRadioDefault3">
 		    				쿠폰 3
 		  				</label>
 					</div>
 					<div class="form-check">
-		  				<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-		  				<label class="form-check-label" for="flexRadioDefault1">
+		  				<input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4">
+		  				<label class="form-check-label" for="flexRadioDefault4">
 		    				쿠폰 4
 		  				</label>
 					</div>
@@ -60,11 +61,11 @@
 	
 	<div class="container mt-5">
 		<h6>결제 정보</h6>
-		<div class="d-flex justify-content-between">
+		<div class="d-flex justify-content-between pt-2" style="background:  #eee;">
 			<p class=" ps-3"><strong>주문 금액</strong></p>
 			<p class="pe-3">KRW 93,700</p>
 		</div>
-		<div class="d-flex justify-content-between">
+		<div class="d-flex justify-content-between pt-2" style="background:  #eee;">
 			<p class=" ps-3"><strong>쿠폰 할인 금액</strong></p>
 			<p class="pe-3">KRW 0</p>
 		</div>
@@ -89,7 +90,7 @@
 					<td>
 						<div>
 							<span>
-								<input class="w240 passenger_meta_info" maxlength="50" name="name" onkeyup="onlyHanEngSpaceToUpper(this);" type="text" >
+								<input class="w240 passenger_meta_info nameChk" maxlength="50" name="name" onkeyup="onlyHanEngSpaceToUpper(this);" type="text" >
 							</span>
 						</div>
 					</td>
@@ -121,7 +122,7 @@
 					</th>
 					<td>
 						<span>
-							<input class="w490" name="acount" title="계좌번호 입력" type="text">
+							<input class="w490 account" name="acount" title="계좌번호 입력" type="text">
 						</span>
 					</td>
 				</tr>
@@ -130,8 +131,10 @@
    	</div>
    	<div class="d-flex justify-content-center container m-5">
    		<div>
-            <button class="btn btn-danger px-5" id="paymentBtn" name="paymentBtn" type="button">KRW 93,700 결제하기</button>
+            <a class="btn btn-danger px-5" href="javascript:void(0)" onclick="chk()">KRW 93,700 결제하기</a>
         </div>
    	</div>
+   	<!-- footer -->
+   	<footer th:include="/footerNav"></footer>
 </body>
 </html>
