--- a/src/main/resources/templates/signup/joinPage.html
+++ b/src/main/resources/templates/signup/joinPage.html
@@ -13,15 +13,19 @@
 	<p class="h1d">회원 가입</p>
 	<hr>
 <main class="container">	
-			<div class="box1"> 
+			<div class="box1">
+			
+			
 			<p  class="h2d ">약관 동의 </p> 
 			<br>
 			<p>JB항공 회원으로 가입하기 위해서는 이용약관, 개인정보처리방침에 동의하셔야 합니다.</p>
 			<br>
+			<br>
 			</div>
 			 <form action="/" method="POST" id="form__wrap">
 			  <div class="input__check">
-			<h4>JB항공 이용약관 동의 </h4>
+				<h4 id="joinbox"><svg style="max-width:15px; margin-right:5px;" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m22.005 15.728c0 .266-.106.52-.293.707-1 1-4.272 4.272-5.272 5.272-.187.188-.442.293-.707.293-1.414 0-6.042 0-7.457 0-.265 0-.519-.105-.707-.293-1-1-4.271-4.272-5.271-5.272-.188-.187-.293-.441-.293-.707 0-1.414 0-6.042 0-7.456 0-.266.105-.52.293-.707 1-1 4.271-4.272 5.271-5.272.188-.188.442-.293.707-.293h7.457c.265 0 .52.105.707.293 1 1 4.272 4.272 5.272 5.272.187.187.293.441.293.707z" fill-rule="nonzero"/></svg> 
+		JB항공 이용약관 동의 </h4>
 			<div style="height: 170px; padding:0 20px 20px 20px; overflow-y : auto; width: 98%;box-sizing: border-box;border: 1px solid #ccc;margin: 10px; line-height: 20px;" tabindex="0">
 
 		<br>제 1장 총칙<br>
@@ -149,7 +153,9 @@
 			<br>
 			<br>
 			 <div class="input__check">
-			<h4>개인정보 수집 및 이용 동의</h4>
+	<h4 id="joinbox"><svg style="max-width:15px; margin-right:5px;" clip-rule="evenodd" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="m22.005 15.728c0 .266-.106.52-.293.707-1 1-4.272 4.272-5.272 5.272-.187.188-.442.293-.707.293-1.414 0-6.042 0-7.457 0-.265 0-.519-.105-.707-.293-1-1-4.271-4.272-5.271-5.272-.188-.187-.293-.441-.293-.707 0-1.414 0-6.042 0-7.456 0-.266.105-.52.293-.707 1-1 4.271-4.272 5.271-5.272.188-.188.442-.293.707-.293h7.457c.265 0 .52.105.707.293 1 1 4.272 4.272 5.272 5.272.187.187.293.441.293.707z" fill-rule="nonzero"/></svg> 
+	
+			개인정보 수집 및 이용 동의</h4>
 			<div style="height: 170px; padding: 20px; overflow-y : auto; width: 98%;box-sizing: border-box;border: 1px solid #ccc;margin: 10px; line-height: 22px;" tabindex="0">
 		<b>가. 개인정보의 수집 및 이용 목적</b><br>
 		① JB항공은 다음의 목적을 위하여 개인정보를 처리합니다. 처리하고 있는 개인정보는 다음의 목적 이외의 용도로는 이용되지 않으며, 이용 목적이 변경되는 경우에는 개인정보 보호법 제18조에 따라 별도의 동의를 받는 등 필요한 조치를 이행할 예정입니다.<br>
