--- a/src/main/resources/templates/reservation/reservationSearch.html
+++ b/src/main/resources/templates/reservation/reservationSearch.html
@@ -7,7 +7,7 @@
     <script src="/bootstrap/js/bootstrap.min.js"></script>
     <link href="/css/reservation/reservationSearch.css" rel="stylesheet">
 </head>
-
+<header th:include="/headerNav"></header>
 <!-- Contnent -->
 <body class="booking">
 <div id="container">
@@ -249,13 +249,13 @@
                     <ul>
                         <li class="section price_list modify route_all route_1" id="msg_filter_route_1_not"
                             style="display: none">
-                            <div class="non_service_wrao mt10 mb70">
+                            <div class="non_service_wrap mt10 mb70">
                                 <div class="con_box">
                                     <p class="note">해당 시간에 조회된 여정이 없습니다.</p>
                                 </div>
                             </div>
                         </li>
-                        <li class="price_list route_all route_1 section_list_item on">
+                        <li class="price_list route_all route_1 section_list_item on" th:each="af : ${airflightList}">
                             <a class="btn section_list_box on" data-bs-toggle="collapse" href="#booking_info"
                                role="button" aria-expanded="false" aria-controls="booking_info" title="구간리스트 열기">
                                 <div class="section_info">
@@ -408,164 +408,6 @@
                             </div>
 
                         </li>
-                        <li class="price_list route_all route_1 section_list_item on">
-                            <a class="btn section_list_box on" data-bs-toggle="collapse" href="#booking_info2"
-                               role="button" aria-expanded="false" aria-controls="booking_info2" title="구간리스트 열기">
-                                <div class="section_info">
-                                    <div class="service_section_box">
-                                        <div class="plan_type">
-                                            <button class="bul_air_info jb" title="편명 보기">JB123</button>
-                                            <button class="bul_air_info" title="항공기 정보 보기">K456-789</button>
-                                        </div>
-                                        <div class="service_name first">
-                                            <strong class="tit">HH:mm</strong>
-                                            <span class="addition">출발지</span>
-                                        </div>
-                                        <div class="service_exp">
-                                            <p class="top">
-                                                (HH)h (mm)m
-                                            </p>
-                                            <p class="bttm">
-                                                <span>직항</span>
-                                            </p>
-                                        </div>
-                                        <div class="service_name last">
-                                            <strong class="tit">HH:mm</strong>
-                                            <span class="addition">도착지</span>
-                                        </div>
-
-                                    </div>
-                                    <div class="price_info fareInfo">
-                                        <div class="class normal">이코노미</div>
-                                        <span class="unit">KRW</span>
-                                        <strong class="price">xx,xxx</strong>
-                                        <p class="empty_seats">x석</p>
-                                    </div>
-                                    <div class="price_info fareInfo">
-                                        <div class="class business">비즈니스</div>
-                                        <span class="unit">KRW</span>
-                                        <strong class="price">xx,xxx</strong>
-                                        <p class="empty_seats">x석</p>
-                                    </div>
-                                </div>
-                            </a>
-                            <!-- FIXME: id name booking_info should be dynamic name
-                                    booking_info, booking_info_2, etc...
-                                    -->
-                            <div class="collapse" id="booking_info2">
-                                <div class="detail_info fix s4 card card-body">
-                                    <div class="rate_box_index">
-                                        <div class="select_rate"></div>
-                                        <div class="rate_list">
-                                            <p class="service_index icon_seat">좌석</p>
-                                            <p class="service_index icon_carryon">기내 수하물</p>
-                                            <p class="service_index icon_free_bag">무료 위탁수하물</p>
-                                            <p class="service_index icon_food">무료 기내식</p>
-                                            <p class="service_index icon_business">비즈니스 혜택</p>
-                                        </div>
-                                    </div>
-                                    <div class="rate_box fareType normal">
-                                        <div class="select_rate">
-                                            <label class="float_item">
-                                            <span class="form-check">
-                                                <!-- FIXME: id name seatGrade1/seatGrade2/seatGrade3 should be dynamic name
-                                                        seatGrade1, seatGrade1_2, etc... -->
-                                                <input type="radio" class="form-check-input" name="seatGrade"
-                                                       id="seatGrade1_2">
-                                                <label class="form-check-label" for="seatGrade1_2">이벤트 운임</label>
-                                            </span>
-                                            </label>
-                                            <a class="btn_tooltip alertIcon" href="#"></a>
-                                        </div>
-                                        <div class="rate_list">
-                                            <p class="service icon_seat">
-                                                <span class="hidden">좌석: </span>
-                                                이코노미 좌석
-                                            </p>
-                                            <p class="service icon_carryon">
-                                                <span class="hidden">기내 수하물: </span>
-                                                10KG
-                                            </p>
-                                            <p class="service icon_free_bag">
-                                                <span class="hidden">무료 위탁 수하물: </span>
-                                                없음
-                                            </p>
-                                        </div>
-                                        <div class="rate_price">
-                                            <span class="unit">KRW</span>
-                                            <strong class="price">xx,xxx</strong>
-                                            <span class="empty_seats">9석</span>
-                                        </div>
-                                    </div>
-                                    <div class="rate_box fareType normal">
-                                        <div class="select_rate">
-                                            <label class="float_item">
-                                                <input type="radio" class="form-check-input" name="seatGrade"
-                                                       id="seatGrade2_2">
-                                                <label class="form-check-label" for="seatGrade2_2">일반 운임</label>
-                                            </label>
-                                            <a class="btn_tooltip alertIcon" href="#"></a>
-                                        </div>
-                                        <div class="rate_list">
-                                            <p class="service icon_seat">
-                                                <span class="hidden">좌석: </span>
-                                                이코노미 좌석
-                                            </p>
-                                            <p class="service icon_carryon">
-                                                <span class="hidden">기내 수하물: </span>
-                                                10KG
-                                            </p>
-                                            <p class="service icon_free_bag">
-                                                <span class="hidden">무료 위탁 수하물: </span>
-                                                없음
-                                            </p>
-                                        </div>
-                                        <div class="rate_price">
-                                            <span class="soldout">매진</span>
-                                        </div>
-                                    </div>
-                                    <div class="rate_box fareType business">
-                                        <div class="select_rate">
-                                            <label class="float_item">
-                                                <input type="radio" class="form-check-input" name="seatGrade"
-                                                       id="seatGrade3_2">
-                                                <label class="form-check-label" for="seatGrade3_2">비즈니스 운임</label>
-                                            </label>
-                                            <a class="btn_tooltip alertIcon" href="#"></a>
-                                        </div>
-                                        <div class="rate_list">
-                                            <p class="service icon_seat_bsn">
-                                                <span class="hidden">좌석: </span>
-                                                비즈니스 좌석
-                                            </p>
-                                            <p class="service icon_carries">
-                                                <span class="hidden">기내 수하물: </span>
-                                                10KG
-                                            </p>
-                                            <p class="service icon_free_bag">
-                                                <span class="hidden">무료 위탁 수하물: </span>
-                                                없음
-                                            </p>
-                                            <p class="service icon_food">
-                                                <span class="hidden">기내식: </span>
-                                                1회 제공
-                                            </p>
-                                            <p class="service icon_business">
-                                                무료제공
-                                                <a class="btn_tooltip alertIcon businessBenefitLayer" href="#">
-                                                </a>
-                                            </p>
-                                        </div>
-                                        <div class="rate_price">
-                                            <span class="unit">KRW</span>
-                                            <strong class="price">xx,xxx</strong>
-                                            <span class="empty_seats">9석</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-
-                        </li>
                     </ul>
                     <!-- // 항공편 리스트 -->
                 </div>
@@ -574,12 +416,12 @@
     </div>
 </div>
 <!--// Contnent -->
-
-
+<footer id="r_footer" th:include="/reservation/rFooter"></footer>
+<footer id="footer" th:include="/footerNav" style="margin-bottom: 61px;"></footer>
 <!--// end content -->
 
 <!--// begin footerFragment -->
-<nav class="navbar fixed-bottom">
+<!-- <nav class="navbar fixed-bottom">
     <div class="container">
         <div class="container-fluid">
             <span class="navbar-brand">총 운임비</span>
@@ -590,9 +432,8 @@
         </div>
         <button href="#" class="next_button">다음</button>
     </div>
-</nav>
+</nav> -->
 <!-- footer blank space for footer nav space -->
-<div style="padding: 28px 0;"></div>
 <!-- Uncomment this block if footer needs drop up menu -->
 <!-- <nav class="navbar fixed-bottom navbar-light bg-light  "> -->
 <!--     <div class="collapse" id="navbarToggleExternalContent"> -->
@@ -609,5 +450,6 @@
 <!--         </button> -->
 <!--     </div> -->
 <!-- </nav> -->
+
 </body>
 </html>
