--- a/src/main/resources/templates/reservation/passenger_list.html
+++ b/src/main/resources/templates/reservation/passenger_list.html
@@ -6,6 +6,7 @@
 <title>Insert title here</title>
 </head>
 <body>
+	<header id="header" th:include="/headerNav"></header>
 	<div class="container">
 		<div class="head">
 			<h2>항공권 예매</h2>
@@ -18,7 +19,6 @@
 
 			<div class="passenger_info">
 				<form action="/reservation/passenger_list.do" method="post">
-					<!-- <input type="hidden" th:name="customerNo" th:value="${session.loginUser.userId}"> -->
 					<div class="p_info-list">
 						<ul>
 							<li class="p_list on">
@@ -40,13 +40,13 @@
 											<table>
 												<tr class="detail_li">
 													<th class="type">성별 <span class="info-text">*</span></th>
-													<td class="input_wrap"><input type="radio" name="pgGender"> 남 <input type="radio" name="pgGender"> 여</td>
+													<td class="input_wrap"><input type="radio" name="p[0].pgGender" value="0"> 남 <input type="radio" name="p[0].pgGender" value="1"> 여</td>
 												</tr>
 												<tr class="detail_li">
 													<th class="type">국적</th>
 													<td class="input_wrap">
 														<div>
-															<input type="text" name="pgCountry" th:value="대한민국" readonly>
+															<input type="text" name="P[0].pgCountry" th:value="대한민국" readonly>
 															<button class="btn" type="button">국적 검색</button>
 														</div>
 													</td>
@@ -69,7 +69,8 @@
 																<option value="">YYYY</option>
 																<option value="2009">2009</option>
 																<option value="2009">2008</option>
-															</select> <select class="w150">
+															</select>
+															<select class="w150">
 																<option value="">MM</option>
 																<option value="01">01</option>
 																<option value="02">02</option>
@@ -83,7 +84,8 @@
 																<option value="10">10</option>
 																<option value="11">11</option>
 																<option value="12">12</option>
-															</select> <select class="w150">
+															</select>
+															<select class="w150">
 																<option value="">DD</option>
 																<option value="01">01</option>
 																<option value="02">02</option>
@@ -158,7 +160,7 @@
 											<table>
 												<tr class="detail_li">
 													<th class="type">성별 <span class="info-text">*</span></th>
-													<td class="input_wrap"><input type="radio" name="pgGender"> 남 <input type="radio" name="pgGender"> 여</td>
+													<td class="input_wrap"><input type="radio" name="p[1].pgGender" value="0"> 남 <input type="radio" name="p[1].pgGender" value="1"> 여</td>
 												</tr>
 												<tr class="detail_li">
 													<th class="type">국적</th>
@@ -183,11 +185,12 @@
 													<th class="type">생년월일</th>
 													<td class="input_wrap">
 														<div>
-															<select class="w170">
+															<select class="w170" name="pgBirth">
 																<option value="">YYYY</option>
 																<option value="2009">2009</option>
 																<option value="2009">2008</option>
-															</select> <select class="w150">
+															</select>
+															<select class="w150" name="pgBirth">
 																<option value="">MM</option>
 																<option value="01">01</option>
 																<option value="02">02</option>
@@ -201,7 +204,8 @@
 																<option value="10">10</option>
 																<option value="11">11</option>
 																<option value="12">12</option>
-															</select> <select class="w150">
+															</select>
+															<select class="w150" name="pgBirth">
 																<option value="">DD</option>
 																<option value="01">01</option>
 																<option value="02">02</option>
@@ -280,7 +284,6 @@
 	</div>
 	<footer id="r_footer" th:include="/reservation/rFooter"></footer>
 	<footer id="footer" th:include="/footerNav"></footer>
-
 
 
 	<script src="/js/reservation/passenger_list.js"></script>
