--- a/src/main/resources/templates/adminpage/adminDetail.html
+++ b/src/main/resources/templates/adminpage/adminDetail.html
@@ -5,7 +5,7 @@
 <title>관리자 정보 페이지</title>
 </head>
 <body>
-	<header th:include="/adminpage/adminheaderNav"></header>
+	<header th:include="/adminpage/headerNav"></header>
 	<main class="container mx-auto mt-5" style="max-width: 600px;">
 		<h1>관리자 상세정보</h1>
 		<form action="/adminpage/update.do" method="post" class="mt-5">
