--- a/src/main/resources/templates/adminpage/findPassword.html
+++ b/src/main/resources/templates/adminpage/findPassword.html
@@ -2,23 +2,22 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="UTF-8">
-<title>관리자 비밀번호 찾기 폼</title>
-<script defer="defer" src="/js/admin/findPw"></script>
+<title>관리자 비밀번호 찾기</title>
+<script defer="defer" src="/js/admin/findPw.js"></script>
 </head>
 <body>
-	<header th:include="/adminpage/adminheaderNav"></header>
-	<main>
+	<header th:include="/adminpage/headerNav"></header>
+	<main class="container mx-auto mt-5" style="max-width: 600px;">
 		<h1>비밀번호 찾기</h1>
-		<form name="adminFindPw" action="/adminpage/findPassword.do" method="post" class=mt-5"">
+		<form name="adminFindPw" action="/adminpage/findPassword.do" method="post" class="mt-5">
 			<div class="mb-3 row">
-				<h3>아이디</h3>
-				<label for="col-sm-2 col-form-label" class="">아이디를 입력해주세요</label>
-				<div>
-					<input name="adminId" type="text" class="form-control" id="" placeholder="">
-					<div class="valid-feedback">
+				<label class="col-sm-2 col-form-label">아이디</label>
+				<div class="col-sm-10">
+					<input name="adminId" type="text" class="form-control" value="">
+					<div class="valid-feedback" id="adminIdValid">
 						존재하는 아이디 입니다.
 					</div>
-					<div class="valid-feedback" id="adminIdInvalid">
+					<div class="invalid-feedback" id="adminIdInvalid">
 						존재하지 않는 아이디 입니다.
 					</div>
 				</div>
