--- a/src/main/resources/templates/adminpage/management.html
+++ b/src/main/resources/templates/adminpage/management.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<header th:include="/adminpage/adminheaderNav"></header>
+	<header th:include="/adminpage/headerNav"></header>
 	
 </body>
 </html>
