--- a/src/main/resources/templates/reservation/rFooter.html
+++ b/src/main/resources/templates/reservation/rFooter.html
@@ -10,7 +10,7 @@
 		</div>
 		<div class="btn_wrap">
 			<button class="btn b_prev">이전 단계</button>
-			<button class="btn b_next">다음 단계</button>
+			<button class="btn b_next" form="rform">다음 단계</button>
 		</div>
 	</div>
 </div>
