--- a/src/main/resources/templates/adminpage/createCoupon.html
+++ b/src/main/resources/templates/adminpage/createCoupon.html
@@ -38,16 +38,11 @@
 		
 		   
 		 	<div>
-		      	<input type="submit" value="쿠폰 생성">
-		      	<button type="submit" class="btn btn-outline-primary">등록</button>
+		      	<button type="submit" class="btbt">쿠폰 등록</button>
 		    </div>
 			
 		</fieldset>
 	</form>
-	<form class="cd-form floating-labels">
-		<legend>쿠폰 내역</legend>
-		</form>
-		<nav class="my-5" th:include="/adminPage/couponList"></nav>
 
 
 </body>
