--- a/src/main/resources/static/css/admin/style2.css
+++ b/src/main/resources/static/css/admin/style2.css
@@ -11,65 +11,84 @@ h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji"; }
 
-a {
+.add {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
-  transition: .3s all ease; }
-  a, a:hover {
+  transition: .3s all ease; 
+   }
+  .add, .add:hover {
     text-decoration: none !important; }
 
 .content {
   padding: 7rem 0; }
-
+  
+td {
+	font-weight: 500 !important;
+	
+}
 h2 {
   font-size: 20px; }
   
 .cplist{
 	font-size:16px !important;
-	font-weight:500 !important;
+	font-weight:bold !important;
+	text-align:center;
 	
 }
-.button {
-  background-color: #0d6efd;
-	border-color: #0d6efd;
-  border: none;
-  color: white;
-  padding: 7px 25px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  border-radius: .25em;
-  font-size: 12px;
+
+.btn {
+
+   text-decoration: none !important;
+
+}
+.btn2 {
   float:right;
+   text-decoration: none !important;
   margin-bottom:15px;
+  margin-left:10px;
+ 
 }
 
+.find-btn{
+	text-align: center;
+}
+.find-btn1{
+	display :inline-block;
+}
+
+.button:hover {
+	color:white;
+}
 .custom-table-responsive {
+	min-width:1100px;
+	
+	
   background-color: #f9f9f9;  
   padding: 20px;
   border-radius: 4px; 
-  text-align: center;}
+}
 
 .custom-table {
-  min-width: 900px; }
+  min-width: 1000px;  }
   .custom-table thead tr, .custom-table thead th {
     border-top: none;
     border-bottom: none !important;
     font-size: 12px;
     text-transform: uppercase;
+   
     letter-spacing: .1rem; }
   .custom-table tbody th, .custom-table tbody td {
     color: #777;
-    font-weight: 400;
+    font-weight: bold;
     padding-bottom: 20px;
     padding-top: 20px;
-    font-weight: 300; }
+    font-weight: 300;  }
     .custom-table tbody th small, .custom-table tbody td small {
       color: #b3b3b3;
-      font-weight: 300; }
+      font-weight: 300;  }
   .custom-table tbody tr:not(.spacer) {
     border-radius: 7px;
-    overflow: hidden;
+   
     -webkit-transition: .3s all ease;
     -o-transition: .3s all ease;
     transition: .3s all ease; }
@@ -157,3 +176,31 @@ h2 {
   background-color: #007bff;
   opacity: .2;
   border: 2px solid #007bff; }
+  
+  .legend {
+  margin:auto; margin: 28px 0;
+  }
+  
+   .legend {
+  padding-bottom: 10px;
+  margin-bottom: 20px;
+  font-size: 30px;
+  font-weight: bold;
+  border-bottom: 1px solid #ecf0f1;
+}
+
+ .legend {
+
+  display: block;
+  width: 100%;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  -ms-appearance: none;
+  -o-appearance: none;
+  appearance: none;
+}
+
+
+
+
+
